# hedgeclog

./: Cargo.toml  Makefile
assets/asset_src/: split_tiles.py
assets/levels_desc/: test_level.ron
assets/tiles/: tile_armoire.gltf  tile_exit.gltf  tile_fire.gltf  tile_floor.gltf  tile_table_1.gltf  tile_table_2.gltf  tile_wall.gltf  tile_wall_angle.gltf  tile_wall_corner.gltf  tile_water.gltf  title_desk.gltf
project/: code_sum_up.md  ideas.md  index.md  misc_backlog.md  naming_conventions.md  roadmap.md
project/.obsidian/: workspace.json
src/: _main.rs  camera.rs  config.rs  debug.rs  hedgehog.rs  level.rs  level_editor.rs  lib.rs  main.rs  movement.rs
src/app/: builder_bevy_app.rs  common.rs  mod.rs
src/asset/: asset_loader.rs
src/common/: asset_loader.rs  camera.rs  common.rs  hedgehog.rs  level.rs  mod.rs  movement.rs  tiles.rs
src/editor/: add_remove_tile.rs  common.rs  cursor_to_world.rs  editor.rs  load_setup.rs  mod.rs  move_camera.rs  select_tile.rs  ui.rs  view_level.rs  view_tile_selection.rs
src/editor/mode_hedgehog/: add_remove_hedgehog.rs  mod.rs  mode_hedgehog.rs
src/editor/mode_tile/: add_remove_tile.rs  common.rs  mod.rs  mode_tile.rs  select_tile.rs
src/episode/: edit_episode.rs  episode.rs  episode_definition.rs  load_run_episode.rs  mod.rs  serialize_episode.rs
src/game/: debug.rs  game.rs  mod.rs
src/level/: level.rs  mod.rs
src/level/actions/: edit_level.rs  load_run_level.rs  mod.rs  serialize.rs
src/level/definition/: camera.rs  hedgehog.rs  level_definition.rs  mod.rs  tiles.rs  zoom_level.rs
