[package]
name = "hedgeclog"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = {version = "0.13", features = ["jpeg"]}
bevy-inspector-egui = "0.23.4"

# bevy = { version = "0.12.0", features = ["dynamic_linking"] }

# allow for optimization in debug mode.
[profiler.dev]
opt-level = 1

# add optimization for dependencies packages (including bevy)
[profiler.dev.package."*"]
opt-level = 3

[lib]

# cargo run --bin empty
