[package]
name = "hedgeclog"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = {version = "0.14", features = ["jpeg"]}
uuid = {version="1.11.0"}
bevy-inspector-egui = "0.23.4"

# allow for optimization in debug mode.
[profiler.dev]
opt-level = 1

# add optimization for dependencies packages (including bevy)
[profiler.dev.package."*"]
opt-level = 3

[lib]

# cargo run --bin empty
